[package]
name = "unsync_channel"
version = "0.1.0"
edition = "2021"
description = "!Send/!Sync channels for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mmastrac/unsync_channel"

[lib]

[[bench]]
name = "channel"
path = "src/bench.rs"
harness = false

[dev_dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
futures = "0.3"
bencher = "0.1"
